After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739935 - asteriskh263: decrease the rank as havn't this kind of decoder.
asteriskh263: decrease the rank as havn't this kind of decoder.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.2.3
Other Linux
: Normal normal
: 1.4.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-11 02:17 UTC by kevin
Modified: 2015-06-03 17:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix the issue. (732 bytes, patch)
2014-11-11 02:17 UTC, kevin
none Details | Review

Description kevin 2014-11-11 02:17:29 UTC
Created attachment 290393 [details] [review]
patch to fix the issue.

when streaming H263 stream on RTSP, asteriskh263 will be loaded. but can't find this kind of video decoder. decrease the rank as havn't this kind of decoder.
Comment 1 Sebastian Dröge (slomo) 2014-11-11 08:28:02 UTC
This seems correct, it should probably have a lower rank than the normal h263 depayloader. And I guess ideally this conversion mechanism should be inside that depayloader or even h263parse (I don't know what exactly the difference between normal h263 and the asterisk variant is).
Comment 2 Nicolas Dufresne (ndufresne) 2015-06-03 13:09:32 UTC
Comment on attachment 290393 [details] [review]
patch to fix the issue.

>commit d71d74daac8ed54156ed103958ab455c63c72b0e
>Author: Song Bing <b06498@freescale.com>
>Date:   Mon Nov 10 11:25:47 2014 +0800
>
>    [asteriskh263] decrease the rank as we havn't this kind of decoder.
>    
>    Decrease the rank as we havn't this kind of decoder.
>    
>    Signed-off-by: Song Bing <b06498@freescale.com>
>
>diff --git a/gst/rtp/gstasteriskh263.c b/gst/rtp/gstasteriskh263.c
>index a01fbc8..8fa3194 100644
>--- a/gst/rtp/gstasteriskh263.c
>+++ b/gst/rtp/gstasteriskh263.c
>@@ -226,5 +226,5 @@ gboolean
> gst_asteriskh263_plugin_init (GstPlugin * plugin)
> {
>   return gst_element_register (plugin, "asteriskh263",
>-      GST_RANK_SECONDARY, GST_TYPE_ASTERISK_H263);
>+      GST_RANK_SECONDARY - 1, GST_TYPE_ASTERISK_H263);
> }
Comment 3 Nicolas Dufresne (ndufresne) 2015-06-03 13:26:44 UTC
1.5
commit 3ab70e4677ce4e2122289aac449cda38c8168bac
Author: Nicolas Dufresne <nicolas.dufresne@collabora.co.uk>
Date:   Wed Jun 3 08:57:57 2015 -0400

    asteriskh263: Un-rank clashing depayloader
    
    This depayloader clash with the standard one for H263p. It produces an
    H263p stream with a modified header. It uses encoding-name that is the
    same as H263p (H263-1998) though the resulting ES is not decodable or
    parsable in GStreamer, making it unsuable in dynamic pipeline. This
    patch unrank this specialized depayloader since it can only be used in
    custom pipeline.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=739935

1.4
commit 06cd3f1c6fb840d1182853c83870e6a27b0907da